--- a/pom.xml
+++ b/pom.xml
@@ -44,12 +44,10 @@
             <artifactId>postgresql-embedded</artifactId>
             <version>2.5</version>
         </dependency>
-
-        <!--<dependency>
+        <dependency>
             <groupId>org.postgresql</groupId>
             <artifactId>postgresql</artifactId>
-            <scope>runtime</scope>
-        </dependency> -->
+        </dependency>
 
         <dependency>
             <groupId>org.projectlombok</groupId>
